Don't paint the stolen background of the body even when it has display:table-cell.

BUG=622795

Review-Url: https://codereview.chromium.org/2133803003
Cr-Commit-Position: refs/heads/master@{#404529}

Former-commit-id: 4d17020d9c377daa8c119aa4648dcf37b2b94490